--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,8 @@
 	<div id="root"></div>
   <section>
 
-    <div class="weather">
-      <img src="http://res.cloudinary.com/jkeohan/image/upload/v1535732381/day.svg" alt="">
-      <p><span>conditions:</span> sunny</p>
-      <p><span>time:</span> day</p>
-    </div>
 
-    <div class="weather">
+    <!-- <div class="weather">
       <img src="http://res.cloudinary.com/jkeohan/image/upload/v1535732381/night.svg" alt="">
       <p><span>conditions:</span> clear</p>
       <p><span>time:</span> day</p>
@@ -45,7 +40,7 @@
       <img src='http://res.cloudinary.com/jkeohan/image/upload/v1535732381/cloudy-night.svg' alt="" />
       <p><span>conditions:</span> clear</p>
       <p><span>time:</span> day</p>
-    </div>
+    </div> -->
   </section>
 </body>
 
